--- a/style.css
+++ b/style.css
@@ -424,7 +424,7 @@ nav ul .icon:hover a{
   flex-direction: row;
   gap: 1rem;
   overflow-x: scroll;
-  padding: 3rem 0;
+  padding: 3rem 0 1rem;
   list-style-type: none;
  }
  .projects .category-list-conatiner ul button{
@@ -437,3 +437,40 @@ nav ul .icon:hover a{
   background-color: var(--light-green-color);
   color: var(--white-color);
  }
+ .projects .Project-list-container{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-template-rows: repeat(2,1fr);
+  margin-bottom: 3rem ; 
+}
+ .projects .Project-list-container .projects-item{
+background-image: url('./images/travelbag.jpg');
+aspect-ratio: 1/1;
+background-size: cover;
+background-position: center;
+backdrop-filter: blur(5px);
+ }
+ .projects .projects-item.p-1{
+  background-image: url('./images/travelbag.jpg');
+ } 
+ .projects .projects-item.p-2{
+  background-image: url('./images/woodboat.jpg');
+ } 
+ .projects .projects-item.p-3{
+  background-image: url('./images/road.jpg');
+ }
+ .projects .projects-item.p-4{
+  background-image: url('./images/cam.jpg');
+ } 
+ .projects .projects-item.p-5{
+  background-image: url('./images/stone.jpg');
+ } 
+ .projects .projects-item.p-6{
+  background-image: url('./images/compess.jpg');
+ } 
+ .projects .projects-item.p-7{
+  background-image: url('./images/boat.jpg');
+ } 
+ .projects .projects-item.p-8{
+  background-image: url('./images/view.jpg');
+ }  
