--- a/style.css
+++ b/style.css
@@ -374,7 +374,7 @@ nav ul .icon:hover a{
   flex-shrink: 0;
   color: var(--white-color);
  }
- .call_me .content h2{
+ .call_me .content h3{
   font-size: 1.25rem;
  }
  .call_me .content p{
@@ -389,7 +389,7 @@ nav ul .icon:hover a{
   content: '\25a0';
   color: var(--light-green-color);
   margin-right: 5px;
-  font-size: 1.23rem;
+  font-size: 1.25rem;
  }
  .call_me form{
   display: flex;
@@ -444,11 +444,10 @@ nav ul .icon:hover a{
   margin-bottom: 3rem ; 
 }
  .projects .Project-list-container .projects-item{
-background-image: url('./images/travelbag.jpg');
 aspect-ratio: 1/1;
 background-size: cover;
 background-position: center;
-backdrop-filter: blur(5px);
+
  }
  .projects .projects-item.p-1{
   background-image: url('./images/travelbag.jpg');
@@ -473,4 +472,230 @@ backdrop-filter: blur(5px);
  } 
  .projects .projects-item.p-8{
   background-image: url('./images/view.jpg');
- }  
+ } 
+ .team{
+  padding: 5rem 20vw;
+  background-color: var(--background-color); 
+} 
+ .team >h3{
+  color: var(--dark-grey-color);
+  text-align: center;
+  font-size: 1.75rem;
+ }
+ .team > p{
+ color: var(--light-grey-color);
+ line-height: 1.5rem;
+ text-align: center;
+ }
+ .team .team-member-list-container{
+ display: flex;
+ flex-direction: row;
+ justify-content: space-between;
+ padding: 3rem 0;
+ }
+ .team .team-member-list-container .team-member-item{
+  width: 20%;
+  flex-grow: 0;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+ }
+ .team .team-member-item .profile-picture{
+  width: 100%;
+  /* border-radius: 5px; */
+  clip-path:polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+  margin-bottom: 1rem; 
+  overflow: hidden;
+}
+.team .team-member-item .profile-picture img{
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+  transition: transform 0.5s ease-in-out;
+}
+.team .team-member-item .profile-picture img:hover{
+  transform: scale(1.25rem);
+}
+ .team .team-member-item p{
+  color: var(--light-grey-color);
+  line-height: 1.5rem;
+ }
+ .team .team-member-item h5{
+  color: var(--dark-grey-color);
+  /* font-size: 1.25rem; */
+ }
+ .team .team-member-item .social-links{
+  margin-top: 1rem;
+  /* margin-right: 10px; */
+  display: flex;
+  align-items: center;
+  /* gap: 0.75rem; */
+ }
+ .team .team-member-item .social-links span {
+  background-color: var(--light-green-color);
+  padding: 0.30rem;
+  color: var(--white-color);
+  cursor: pointer;
+  transition: all 0.125s ease-in-out;
+  clip-path: polygon(0 25%, 0 75%, 50% 100%,100% 75%,100% 25%,50% 0%);
+}
+.team .team-member-item .social-links span:hover{
+  background-color: var(--white-color);
+  color: var(--light-green-color);
+}
+.about{
+  display: flex;
+  background-color: var(--white-color);
+
+}
+.about > img{
+ width: 50%;
+ flex-grow: 0;
+ flex-shrink: 0;
+ border-radius: 5px;
+ filter: contrast(var(--image-contrast)) grayscale(var(--image-greyscale));
+
+}
+.about >.content{
+  width: 50%;
+  flex-grow: 0;
+  padding-left: 3rem;
+  flex-shrink:0; 
+ 
+}
+.about .content h3{
+  color: var(--light-grey-color);
+  font-size: 1.75rem;
+}
+.about .content p{
+ color: var(--dark-grey-color);
+ line-height: 1.5rem;
+}
+.about .content ul{
+ color: var(--light-grey-color);
+ list-style-type: none;
+ padding: 0;
+}
+.about .content ul li::before{
+  content: '\25a0';
+  color: var(--dark-green-color);
+  margin-right: 5px;
+  font-size: 1.5rem;
+}
+.about .content .stats-list-container{
+  padding: 1.5rem 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+}
+.about .content .stats-list-container .stat-item{
+  width: 30%;
+  flex-grow: 0;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+}
+.about .stat-item .number{
+  color: var(--light-green-color);
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+.contact{
+  padding: 5rem 20vw;
+  background-color: var(--background-color);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.contact .content,.contact .form{
+  width: 45%;
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+.contact .content h3{
+  color: var(--dark-grey-color);
+  font-size: 1.75rem;
+}
+.contact .content h4{
+  color: var(--dark-grey-color);
+  font-size: 1.5rem;
+}
+
+.contact .content p{
+  color: var(--light-grey-color);
+  line-height: 1.5rem;
+}
+.contact .content p i{
+  color: var(--light-green-color);
+  margin: 0  0.5pxs;
+}
+.contact .content .contact-info-container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+ 
+}
+.contact .content .contact-info-container .contact-info-item{
+  flex-shrink: 0;
+  margin: 0%; 
+  padding: 0;
+  line-height: 0.1;
+}
+.contact .content .social-links-list-container{
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+}
+.contact .social-links-list-container .social-links-item{
+  background-color: var(--light-green-color);
+  padding: 0.75rem;
+  color: var(--white-color);
+  transition: all 0.125s ease-in-out;
+  cursor: pointer;
+  clip-path: polygon(0 25%, 0 75%, 50% 100%,100% 75%,100% 25%,50% 0%);
+}
+.contact .social-links-list-container .social-links-item:hover{
+  background-color: var(--white-color);
+  color: var(--light-green-color);
+}
+.contact .form form{
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  gap: 1rem;
+}
+.contact input, .contact textarea{
+  padding: 1rem;
+  border-radius: 5px;
+  border: 1px solid var(--light-grey-border-color);
+  background-color: var(--dark-grey-color);
+}
+.contact .form label{
+  color: var(--light-grey-color);
+  /* font-size: 1.25rem; */
+  line-height: 1.25rem;
+}
+footer{
+  padding: 5rem 20vw;
+  background-color: var(--dark-green-color);
+  color: var(--white-color);
+}
+footer .footer-list-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 2rem;
+}
+footer .footer-list-container .footer-item.wide{
+  width: 50%;
+  flex-grow: 0;
+  flex-shrink: 0;
+}
